Update Dockerfile - delete ENTRYPOINT commit